navbar and banner is done

--- a/style/navBar.css
+++ b/style/navBar.css
@@ -1,22 +1,43 @@
-*{
-    padding: 0;
-    margin: 0;
+* {
+  padding: 0;
+  margin: 0;
+  color: #fff;
 }
-.navBar{
-    nav{
-        display: flex;
-        justify-content: space-between;
-        padding: 10px ;
+::-webkit-scrollbar{
+  display: none !important;
+  overflow: hidden;
+}
+body {
+  background: #060606;
+}
+.navBar {
+  nav {
+    width: 90%;
+    margin: auto;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    position: -webkit-sticky;
+    top: 0;
+    h1{ 
+        color: #687cff;
+        font-size: 30px !important;
+        font-family:cursive;
     }
-    ul{
-        display: flex;
-        list-style: none;
-        align-items:center;
-        justify-content: center;
-        gap: 20px;
-        a{
-            text-decoration: none;
-            font-size: 18px;
-        }
+  }
+  ul {
+    display: flex;
+    list-style: none;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    
+    a {
+      text-decoration: none;
+      font-size: 20px;
+      font-weight: 600;
+      letter-spacing: 1px;
+      color: #fff !important;
     }
+  }
 }
