--- a/style/navBar.css
+++ b/style/navBar.css
@@ -3,7 +3,7 @@
   margin: 0;
   color: #fff;
 }
-::-webkit-scrollbar{
+::-webkit-scrollbar {
   display: none !important;
   overflow: hidden;
 }
@@ -12,17 +12,24 @@ body {
 }
 .navBar {
   nav {
-    width: 90%;
+    width: 100%;
     margin: auto;
     padding: 10px;
     display: flex;
     justify-content: space-between;
-    position: -webkit-sticky;
+    position: fixed;
     top: 0;
-    h1{ 
-        color: #687cff;
-        font-size: 30px !important;
-        font-family:cursive;
+    h1 {
+      /* color: #687cff; */
+      font-size: 30px !important;
+      font-family: cursive;
+      -webkit-text-stroke: 1px white;
+      color: transparent;
+      font-weight: 900;
+      transition: 0.7s;
+      &:hover {
+        text-shadow: 0px 0px 10px #687cff;
+      }
     }
   }
   ul {
@@ -31,7 +38,7 @@ body {
     align-items: center;
     justify-content: center;
     gap: 20px;
-    
+
     a {
       text-decoration: none;
       font-size: 20px;
