--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,4 @@
-* {
+*,html {
   padding: 0;
   margin: 0;
   color: #fff;
@@ -51,17 +51,30 @@ nav {
       transform: scale(1);
       z-index: -1;
     }
-    
   }
 }
 .contactUs {
   input {
     border: 1px solid black !important;
+    width: 350px !important;
     &:focus {
       outline: 1px solid black !important;
     }
   }
   ::placeholder {
     color: #fff !important;
+  }
+}
+.projects {
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 20px;
+    .box{
+      height: 300px;
+      background: #000;
+      border:1px solid #fff;
+      border-radius: 10px;
+    }
   }
 }
