--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,9 @@
-*,html {
+*,
+html {
   padding: 0;
   margin: 0;
   color: #fff;
+  font-family: "Urbanist",sans-serif ;
 }
 ::-webkit-scrollbar {
   display: none !important;
@@ -69,12 +71,20 @@ nav {
   .grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 20px;
-    .box{
-      height: 300px;
+    gap: 10px;
+    .box {
       background: #000;
-      border:1px solid #fff;
+      border: 1px solid #fff;
       border-radius: 10px;
+      overflow: hidden;
+      position: relative;
+        .img-holder{
+          img {
+            display: block;
+            object-fit: cover;
+            object-position: center;
+        }
+        }
     }
   }
 }
