--- a/style/style.css
+++ b/style/style.css
@@ -65,16 +65,26 @@ nav {
     color: #fff !important;
   }
 }
-.projects {
+.projects,.certificates {
   .grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px;
     .box{
-      height: 300px;
+      height: auto;
       background: #000;
-      border:1px solid #fff;
+      border:2px dashed rgb(220, 53, 69);
       border-radius: 10px;
+      padding: 5px;
+      overflow: hidden;
+      &:hover img{
+        transform: scale(1.09);
+      }
+      img{
+      border-radius: 10px;
+      transition: .7s ease-in-out;
+
+      }
     }
   }
 }
