--- a/style/style.css
+++ b/style/style.css
@@ -57,10 +57,11 @@ nav {
 }
 .contactUs {
   input {
-    border: 1px solid black !important;
+    border: none;
+    border-bottom: 2px solid black !important;
     width: 350px !important;
     &:focus {
-      outline: 1px solid black !important;
+      outline: none;
     }
   }
   ::placeholder {
@@ -75,16 +76,19 @@ nav {
     gap: 10px;
     .box {
       background: #000;
-      border: 1px solid #fff;
+      border: 2px dashed #dc3545;
       border-radius: 10px;
       overflow: hidden;
-      position: relative;
-      .img-holder {
-        img {
-          display: block;
-          object-fit: cover;
-          object-position: center;
-        }
+      padding: 5px;
+      &:hover img {
+        transform: scale(1.04);
+      }
+      img {
+        display: block;
+        object-fit: cover;
+        object-position: center;
+        border-radius: 10px;
+        transition: 0.5s ease-in-out;
       }
     }
   }
